@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 	<!-- 一级菜单 -->
-	<string name="home">关于盛隆</string>
+	<!--<string name="home">关于盛隆</string>
 	<string name="introduction">公司简介</string>
 	
 	<string name="news">新闻中心</string>
 	<string name="product">产品与服务</string>
 	<string name="customer">客户与成功案例</string>
-	<string name="connect">联系我们</string>
+	<string name="connect">联系我们</string>-->
+	
+	<string name="home">盛隆</string>
+	<string name="introduction">公司简介</string>
+	
+	<string name="news">新闻</string>
+	<string name="product">产品</string>
+	<string name="customer">客户</string>
+	<string name="connect">联系</string>
 	
 	<string name="settings">设置</string>
 	
